papers/paper34/v1.2/README.md
# Paper 34 v1.2 Reproducibility Bundle

Classification: `verified / public-reproducibility-support / R4-FIRAS audited`

This bundle contains the curated scripts, frozen outputs, constants, and audit
reports needed to reproduce the Paper 34 v1.2 Hubble-tension scorecard,
anti-fit checks, and R4/FIRAS non-dependency audit.

It is intentionally not a mirror of the private research lab. Exploratory route
searches, killed-route scans, private scratch state, and manuscript drafts are
excluded.

## Paper Version

Paper:

```text
Paper 34 v1.2
The Hubble Tension Resolved: Six Methods, Three Rungs, Zero Fitted Parameters
```

Public paper record:

```text
https://zenodo.org/records/19558163/latest
```

Convention reference for new papers:

```text
https://dfife.github.io/data/conventions_v2.md
```

## Contents

- `scripts/01_compute_hext_grid.py`
  - Computes the full `(alpha,n)` grid for the Paper 34 `H_ext` formula.
- `scripts/02_compare_to_published_measurements.py`
  - Computes six-method H0 pulls against imported published comparison values.
- `scripts/03_run_anti_fit_check.py`
  - Reproduces the anti-fit backstop table.
- `scripts/04_r4_firas_impact_audit.py`
  - Audits the Paper 17 v1.5 R4/FIRAS repair against Paper 34 and verifies
    that the Hubble scorecard has no active R4 dependency.
- `scripts/05_validate_expected_outputs.py`
  - Fast validation of the frozen result files included in this bundle.
- `data/imported_constants.json`
  - Framework constants and published H0 comparison values.
- `results/`
  - Frozen JSON outputs generated by the scripts.
- `reports/`
  - Kappa-style structural audit report and JSON.

## Quick Validation

From this directory:

```bash
python3 scripts/05_validate_expected_outputs.py
```

Expected output:

```json
{
  "checks": 16,
  "state": "passed"
}
```

## Full Rerun

From this directory:

```bash
python3 scripts/01_compute_hext_grid.py
python3 scripts/02_compare_to_published_measurements.py
python3 scripts/03_run_anti_fit_check.py
python3 scripts/04_r4_firas_impact_audit.py
python3 scripts/05_validate_expected_outputs.py
```

No external package or cosmology solver is required.

## Headline Values

```text
Planck CMB:  H_ext = 67.575856535826, pull = +0.351713 sigma
GW sirens:   H_ext = 67.575856535826, pull = -0.566864 sigma
TRGB direct: H_ext = 70.256778814438, pull = -0.068671 sigma
TDCOSMO:     H_ext = 71.387557193550, pull = -0.059012 sigma
SH0ES:       H_ext = 73.044060740302, pull = +0.044061 sigma
TRGB+SN:     H_ext = 73.044060740302, pull = -0.154476 sigma
```

R4/FIRAS repair result:

```text
R4_FIRAS = 1.0031014644105183
Paper 34 H_ext R4 dependency = none
Paper 34 H0 scorecard changed by R4/FIRAS = false
```

Anti-fit check:

```text
GW sirens remain assigned to (alpha,n) = (1,0), even though (3/2,1)
is numerically closer on the admissible grid.
```

## Claim Boundary

- `verified`: arithmetic grid generation, scorecard pull calculation, frozen
  output validation, anti-fit table reproduction, and R4/FIRAS impact audit.
- `derived/scoped`: Paper 34's extension-premise package as stated in the
  manuscript and kappa-audit report.
- `not claimed`: Paper 34 does not independently predict the observed CMB
  temperature. The `Planck CMB` row is an H0 method-class row, and these
  scripts do not prove the extension premises by themselves.
- `not included`: private route-search scripts, failed route scans, draft
  manuscripts, and non-public scratch state.

## References

The comparison values and source links are recorded in
`data/imported_constants.json`.
